--- a/html/forgetpassword.html
+++ b/html/forgetpassword.html
@@ -14,7 +14,7 @@
     <input type="password" id="old password" name="old password"> <br> <br>
     <label for="reset password">Reset Password</label>
     <input type="password" id="reset password" name="reset password"> <br> <br>
-  <input type="submit">
+  <input type="submit" id="submit">
 </form>
 
 </body>
