--- a/html/imageanimation.html
+++ b/html/imageanimation.html
@@ -11,13 +11,37 @@
 <body>
     <div class="image-scroll">
         <div class="scroll-container">
-            <div class="image"><img src="" alt="Image1"></div>
-            <div class="image"><img src="" alt="Image2"></div>
-            <div class="image"><img src="" alt="Image3"></div>
-            <div class="image"><img src="" alt="Image4"></div>
-            <div class="image"><img src="" alt="Image5"></div>
+            <div class="image"><img src="../Images/image1.png" alt="Image1"></div>
+            <div class="image"><img src="../Images/image2.png" alt="Image2"></div>
+            <div class="image"><img src="../Images/image3.png" alt="Image3"></div>
+            <div class="image"><img src="../Images/image4.png" alt="Image4"></div>
+            <div class="image"><img src="../Images/image5.png" alt="Image5"></div>
         </div>
     </div>
+
+    <hr>
+<!-- hyperlink image -->
+    <div class="hyperlink">
+        <h1>To add an hyperlink to an image</h1>
+
+        <p>
+            <a href="https://unsplash.com/s/photos/Sunflower-wallpaper"><img id="hyper-img"
+                    src="https://th.bing.com/th/id/R.071f43408bca9673f370e05c9dc838d2?rik=NrusFm%2flV2xtlw&riu=http%3a%2f%2fimages.unsplash.com%2fphoto-1597848212624-a19eb35e2651%3fixlib%3drb-1.2.1%26q%3d80%26fm%3djpg%26crop%3dentropy%26cs%3dtinysrgb%26w%3d1080%26fit%3dmax&ehk=4go6t8l6CowBI8qequqsHCc%2f5ScfWteTa7jCCoY8Bqg%3d&risl=&pid=ImgRaw&r=0"
+                    alt="sunflower pic" >
+            </a>
+        </p>
+
+    </div>
+
+    <hr>
+<!-- Rounded/circled image -->
+    <div class="rounded-image">
+
+        <h2>Rounded Image</h2>  <!--use border radius property to create rounded image -->
+        <img src="../Images/tree.png" id="rounded-img" alt="tree pic" >
+
+    </div>
+
 </body>
 
 </html>
