--- a/html/index.html
+++ b/html/index.html
@@ -14,12 +14,13 @@
             <li><a href="#">Services</a></li>
            <li><a href="../html/signup.html">Signup</a></li>
            <li><a href="../html/login.html">Login</a></li>
-           
-
-        </ul>
-      
+        </ul>   
     </nav>
-  
+    <!-- iframes tag -->
+  <div class="videos">
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/pjslXJZi4EQ?autoplay=1"  frameborder="0" allow="autoplay; encrypted-media; " allowfullscreen></iframe>
+
+  </div>
 <footer>
     <p>&copy All Rights Reserved.</p>
     <h3>Contact Us</h3>
