--- a/html/imageanimation.html
+++ b/html/imageanimation.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <pre>
+        All about different types of images with css styling
+    </pre>
+    
     <div class="image-scroll">
         <div class="scroll-container">
             <div class="image"><img src="../Images/image1.png" alt="Image1"></div>
@@ -20,6 +25,7 @@
     </div>
 
     <hr>
+   
 <!-- hyperlink image -->
     <div class="hyperlink">
         <h1>To add an hyperlink to an image</h1>
