--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mainpage</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -24,8 +25,17 @@
 <footer>
     <p>&copy All Rights Reserved.</p>
     <h3>Contact Us</h3>
-    <p><a href="mailto:xabc12@gmail.com">xabc12@gmail.com</a></p>
-    <p></p>
+    <p>
+        <a href="mailto:xabc12@gmail.com" class="mail-icons">
+        <i class="fas fa-envelope"></i> E-mail:xabc12@gmail.com</a>
+    </p>
+    
+    <p>
+        <a href="https://www.linkedin.com/in/yourprofile" class="linkedin-icons" target="_blank">
+          <i class="fab fa-linkedin"></i> LinkedIn 
+        </a>
+    </p>
+
 </footer>
 
 
