--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,8 @@
     <h3>Contact Us</h3>
     <p>
         <a href="mailto:xabc12@gmail.com" class="mail-icons">
-        <i class="fas fa-envelope"></i> E-mail:xabc12@gmail.com</a>
+        <i class="fas fa-envelope"></i> 
+        E-mail:xabc12@gmail.com</a>
     </p>
     
     <p>
