added new files

--- a/html/index.html
+++ b/html/index.html
@@ -8,15 +8,24 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-           <li><a href="../html/signup.html">Signup</a></li>
-           <li><a href="../html/login.html">Login</a></li>
-        </ul>   
-    </nav>
+    <div class="navbar">
+        <div class="logo"><i class="fa-brands fa-slack"></i> DooDle</div>
+
+        <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+               <a href="../html/signup.html">Signup</a>
+               <a href="../html/login.html">Login</a>
+           
+        </nav>
+
+        <div class="search-box">
+            <input type="text" placeholder="Search...">
+            <button>Go</button>
+
+        </div>
+    </div>
     <!-- iframes tag -->
   <div class="videos">
    <iframe width="560" height="315" src="https://www.youtube.com/embed/pjslXJZi4EQ?autoplay=1"  frameborder="0" allow="autoplay; encrypted-media; " allowfullscreen></iframe>
