--- a/html/signup.html
+++ b/html/signup.html
@@ -20,7 +20,7 @@
     <label for="Retype password"> Retype Password</label>
     <input type="password" id="retype password" name="retype password"><br> <br>
     <input type="submit" value="Sign Up" id="signup">
-
+    <p id="signin-button">Already have an account?<a href="../html/login.html" id="sign-in">Login</a></p>
 </form>
 
 </body>
