--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,17 @@
     <title>Mainpage</title>
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <script src="../JS/index.js" defer></script>
 </head>
 <body>
     <div class="navbar">
         <div class="logo"><i class="fa-brands fa-slack"></i> DooDle</div>
+         <!-- Hamburger Icon -->
+        <div class="hamburger-menu" id="hamburger-menu" >
+            <i class="fa-solid fa-bars"></i>
+        </div>
 
-        <nav>
+        <nav id="navbar-links">
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Services</a>
