added new files

--- a/html/networktech.html
+++ b/html/networktech.html
@@ -4,15 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Network Technologies</title>
+    <link rel="stylesheet" href="../css/networktech.css">
 </head>
 
 <body>
     <h1>Understanding Network Technologies</h1>
-    <!-- section for network types -->
-    <article class="all-networks"></article>
-    <h2>Types of Networks</h2>
-    <article class="network"></article>
+    <!-- Section for network types -->
+<article class="all-networks">
+    <h1>Types of Networks</h1>
+    <article class="network">
+      <!-- Information about LAN -->
+      <h2>Local Area Network (LAN)</h2>
+      <p>A Local Area Network (LAN) is a network that connects computers and devices in a limited geographical area, such as a home, school, or office. It is known for its high speed and low cost.</p>
+    </article>
+    <article class="network">
+      <!-- Information about WAN -->
+      <h2>Wide Area Network (WAN)</h2>
+      <p>A Wide Area Network (WAN) spans a large geographical area, often connecting multiple smaller networks like LANs. The internet is the largest example of a WAN.</p>
+    </article>
+    <article class="network">
+      <!-- Information about MAN -->
+      <h2>Metropolitan Area Network (MAN)</h2>
+      <p>A Metropolitan Area Network (MAN) covers a city or a large campus. It is larger than a LAN but smaller than a WAN, and often connects several LANs in a region.</p>
+    </article>
+  </article>
+
+  <!-- Footer section -->
+<footer>
+    <!-- Footer description -->
+    <p>Networks like LAN, WAN, and MAN are fundamental in connecting devices and enabling communication across different geographical areas.<br>
+    Author: John Doe<br>
+    <!-- Contact information -->
+    <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+  </footer>
+
 </body>
 
 </html>
