--- a/html/image_upload_form.html
+++ b/html/image_upload_form.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>image_upload_form.html</title>
+    <link href="
+https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css
+" rel="stylesheet">
+<script src="
+https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js
+"></script>
 </head>
 <body>
     <div class="container mt-5">
@@ -22,9 +28,10 @@
                 <input type="file" class="form-control" id="imageupload" accept="image/*" required>
             </div>
             <div class="mb-3">
-                <label for="description" class="form-label"></label>
-                <input type="" class="form-control" id="" placeholder="Enter your " required>
+                <label for="description" class="form-label">Description</label>
+                <textarea class="form-control" id="description" rows="3" placeholder="Enter your brief description " required></textarea>
             </div>
+            <button type="submit" class="btn btn-primary w-100">Upload</button>
         </form>
     </div>
 </body>
