--- a/html/sample.html
+++ b/html/sample.html
@@ -15,6 +15,11 @@ https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css
         <div class="col-sm-4">.col-sm-4</div>
         <div class="col-sm-4">.col-sm-4</div>
         <div class="col-sm-4">.col-sm-4</div>
-      </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">.col-m6-6</div>
+        <div class="col-md-6">.col-m6-6</div>
+    </div>
+
 </body>
 </html>
