--- a/html/Types_width_container.html
+++ b/html/Types_width_container.html
@@ -34,13 +34,14 @@
         <p>this is a <strong>fixed width container.it changes it's width with different breakpoints(screen sizes) and stays centered on the page.</strong></p>
         <p>Resize the browser window to see the container adjust its width while remaining 
             centered.</p>
+        </div>
             <!-- full-width container -->
             <div class="container-fluid"> 
                 <p>This is a <strong>full-width container</strong>. It always spans the en re width of the 
         screen, no ma er the screen size.</p> 
                 <p>Resize the browser window, and you'll see the green box always stretches from edge to 
         edge.</p> 
-            </div></div>
+            </div>
  <!-- containr-fluid -->
             <div class="container-md"> 
                 <p>This is a <strong>responsive container</strong>. It is full-width on smaller screens but 
