added new files

--- a/Bootstrap/pagination.html
+++ b/Bootstrap/pagination.html
@@ -20,6 +20,23 @@
         </ul>
     </div>
 
+    <!-- another type -->
+<h1>different type</h1>
+<ul class="pagination justify-content-end">
+    <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+    <li class="page-item active"><a class="page-link" href="../Bootstrap/pagination.html">1</a></li>
+    <li class="page-item"><a class="page-link" href="../html/index.html">2</a></li>
+    <li class="page-item"><a class="page-link" href="../html/login.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="../html/signup.html">Next</a></li>
+
+</ul>
+
+<h2>BREADCRUMBS</h2>
+<ul class="breadcrumb">
+    <li class="breadcrumb-item"><a href="">Home</a></li>
+    <li class="breadcrumb-item"><a href="">section</a></li>
+    <li class="breadcrumb-item active">subsection</li>
+</ul>
     <!-- Link Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
