--- a/JS/jshtml.html
+++ b/JS/jshtml.html
@@ -7,20 +7,37 @@
 </head>
 <body>
     <script>
-//         function assignGrade(mark){
-//     if(mark>=90)
-//         console.log("grade A:" + mark);
-//     else if(mark>=80)
-//         console.log("grade B" + mark);
-//     else if(mark>=70)
-//         console.log("grade c" + mark);
-//     else
-//     console.log("grade F" + mark)
-// }
-// let mark=parseInt(prompt("enter your mark:"));
-// assignGrade(mark);
+        function assignGrade(mark){
+            if(mark >= 90){
+           document.writeln("Grade A: " + mark);
+            }
+            else if(mark >= 80){
+           document.writeln("Grade B: " + mark);
+            }
+            else if(mark >= 70){
+           document.writeln("Grade C: " + mark);
+            }
+            else{
+            document.writeln("Grade F: " + mark);
+            }
+        }
 
-
+        let mark = parseInt(prompt("Enter your mark:"));
+        assignGrade(mark);
+//for-loop
+        for(i=1;i<=5;i++){
+    document.writeln(i+"<br/>")
+}
+//to display numbers from 10 to 1
+for(j=10;j>=1;j--){
+    document.writeln(j+"<br/>")
+}
+//while loop
+var k=11;
+while(k<=15){
+    document.writeln(k+"<br/>")
+        k++;
+}
     </script>
 </body>
 </html>
