--- a/Jquery/simple_interest_calculator.html
+++ b/Jquery/simple_interest_calculator.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"> </script>
+<style>
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+    }
+    .container{
+        width: 300px;
+        margin: auto;
+        padding: 20px;
+        border:1px solid #ccc;
+        border-radius: 5px;
+    }
+    input,button{
+        width: 100%;
+        padding: 10px;
+        margin-top: 10px;
+    }
+</style>
 </head>
 <body>
     <div class="container">
@@ -25,12 +43,19 @@
                 let principal=parseFloat($("#principal").val());
                 let rate=parseFloat($("#rate").val());
                 let time=parseFloat($("#time").val());
-            })
 
+                //validate Input
+                if(isNaN(principal)|| isNaN(rate) || isNaN(time) || principal <=0 || rate<=0 || time <=0){
+                    $("#result").text("please enter positive values");
+                    return;
+                }
+                //calculate simple interest
+                let interest=(principal*rate*time)/100;
+                //display result
+                $("#result").html(`<strong>Simple Interest:₹${interest.toFixed(2)}</strong>`);
+            });
 
-
-
-        })
+        });
     </script>
 </body>
 </html>
